suppress build message in TravisCI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
 script:
 - npm run test:lint
 - npm run test:unit
-- npm run clean && $(npm bin)/webpack --colors --bail
+- npm run clean && $(npm bin)/webpack --colors --bail --silent
 - npm run test:integration
 deploy:
 - provider: script
