--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ deploy:
     - smoke
     condition: $TRAVIS_EVENT_TYPE != cron
   skip_cleanup: true
-  script: if npm info scratch-gui | grep -q $RELEASE_VERSION; then git tag $RELEASE_VERSION && git push origin $RELEASE_VERSION; fi
+  script: if npm info scratch-gui | grep -q $RELEASE_VERSION; then git tag $RELEASE_VERSION && git push https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git $RELEASE_VERSION; fi
 - provider: s3
   on:
     branch:
