--- a/package.json
+++ b/package.json
@@ -123,12 +123,11 @@
     "web-audio-test-api": "^0.5.2",
     "webpack": "^4.6.0",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.3",
     "xhr": "2.5.0",
-    "xml2js": "^0.4.19"
+    "xml2js": "^0.4.19",
+    "webpack-dev-server": "^3.1.14"
   },
   "jest": {
-    "setupFiles": [
       "raf/polyfill",
       "<rootDir>/test/helpers/enzyme-setup.js"
     ],
