--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "jest": {
+    "setupFiles": [
       "raf/polyfill",
       "<rootDir>/test/helpers/enzyme-setup.js"
     ],
