--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ deploy:
     - master
     - develop
     - smoke
+    - perf
     condition: $TRAVIS_EVENT_TYPE != cron
   skip_cleanup: true
   email: $NPM_EMAIL
@@ -47,6 +48,7 @@ deploy:
     - master
     - develop
     - smoke
+    - perf
     condition: $TRAVIS_EVENT_TYPE != cron
   skip_cleanup: true
   script: if npm info scratch-gui | grep -q $RELEASE_VERSION; then git tag $RELEASE_VERSION && git push https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git $RELEASE_VERSION; fi
