--- a/package.json
+++ b/package.json
@@ -107,11 +107,11 @@
     "scratch-audio": "0.1.0-prerelease.20190114210212",
     "scratch-blocks": "0.1.0-prerelease.1549990124",
     "scratch-l10n": "3.1.20190218084652",
-    "scratch-paint": "0.2.0-prerelease.20190114205252",
-    "scratch-render": "0.1.0-prerelease.20190213183713",
-    "scratch-storage": "1.2.2",
-    "scratch-svg-renderer": "0.2.0-prerelease.20190125192231",
-    "scratch-vm": "0.2.0-prerelease.20190215190223",
+    "scratch-paint": "github:mzgoddard/scratch-paint#perf-20190222",
+    "scratch-render": "github:mzgoddard/scratch-render#perf-20190222",
+    "scratch-storage": "github:mzgoddard/scratch-storage#perf-20190222",
+    "scratch-svg-renderer": "github:mzgoddard/scratch-svg-renderer#perf-20190222",
+    "scratch-vm": "github:mzgoddard/scratch-vm#perf-20190222",
     "selenium-webdriver": "3.6.0",
     "startaudiocontext": "1.2.1",
     "style-loader": "^0.23.0",
