--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,7 @@ cache:
 install:
 - npm --production=false install
 - npm --production=false update
-script:
-- npm test
-- if [ "$TRAVIS_EVENT_TYPE" == "pull_request" ] && [ "$TRAVIS_BRANCH" == "master" ]; then  npm run test:smoke; fi
+script: true
 before_deploy:
 - >
   if [ -z "$BEFORE_DEPLOY_RAN" ]; then
