--- a/package.json
+++ b/package.json
@@ -29,6 +29,13 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
+  "dependencies": {
+    "scratch-paint": "github:mzgoddard/scratch-paint#perf-20190222",
+    "scratch-render": "github:mzgoddard/scratch-render#perf-20190222",
+    "scratch-storage": "github:mzgoddard/scratch-storage#perf-20190222",
+    "scratch-svg-renderer": "github:mzgoddard/scratch-svg-renderer#perf-20190222",
+    "scratch-vm": "github:mzgoddard/scratch-vm#perf-20190222"
+  },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
@@ -107,11 +114,6 @@
     "scratch-audio": "0.1.0-prerelease.20190114210212",
     "scratch-blocks": "0.1.0-prerelease.1549990124",
     "scratch-l10n": "3.1.20190218084652",
-    "scratch-paint": "github:mzgoddard/scratch-paint#perf-20190222",
-    "scratch-render": "github:mzgoddard/scratch-render#perf-20190222",
-    "scratch-storage": "github:mzgoddard/scratch-storage#perf-20190222",
-    "scratch-svg-renderer": "github:mzgoddard/scratch-svg-renderer#perf-20190222",
-    "scratch-vm": "github:mzgoddard/scratch-vm#perf-20190222",
     "selenium-webdriver": "3.6.0",
     "startaudiocontext": "1.2.1",
     "style-loader": "^0.23.0",
