Update scratch branches

--- a/package.json
+++ b/package.json
@@ -105,13 +105,13 @@
     "redux-throttle": "0.1.1",
     "rimraf": "^2.6.1",
     "scratch-audio": "0.1.0-prerelease.20190114210212",
-    "scratch-blocks": "0.1.0-prerelease.1552662801",
+    "scratch-blocks": "github:ericrosenbaum/scratch-blocks#totally-normal",
     "scratch-l10n": "3.1.20190220143732",
     "scratch-paint": "0.2.0-prerelease.20190318170811",
     "scratch-render": "0.1.0-prerelease.20190312125229",
     "scratch-storage": "1.2.2",
     "scratch-svg-renderer": "0.2.0-prerelease.20190304180800",
-    "scratch-vm": "0.2.0-prerelease.20190321151527",
+    "scratch-vm": "github:rschamp/scratch-vm#new-filters",
     "selenium-webdriver": "3.6.0",
     "startaudiocontext": "1.2.1",
     "style-loader": "^0.23.0",
