--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "redux-throttle": "0.1.1",
     "rimraf": "^2.6.1",
     "scratch-audio": "0.1.0-prerelease.20190114210212",
-    "scratch-blocks": "github:ericrosenbaum/scratch-blocks#totally-normal",
+    "scratch-blocks": "github:llk/scratch-blocks#totally-normal",
     "scratch-l10n": "3.1.20190220143732",
     "scratch-paint": "0.2.0-prerelease.20190318170811",
     "scratch-render": "0.1.0-prerelease.20190312125229",
