Added ability to convert monaco to block using RegEx

--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     }
   },
   "dependencies": {
-    "react-monaco-editor": "^0.25.1"
+    "react-monaco-editor": "^0.25.1",
+    "uuid": "^3.3.2"
   }
 }
