--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,9 @@
         "@babel/plugin-proposal-object-rest-spread",
         ["react-intl", {
             "messagesDir": "./translations/messages/"
-        }]],
+        }],
+        ["import", { "libraryName": "antd", "style": true }]
+    ],
     "presets": [
         ["@babel/preset-env", {"targets": {"browsers": ["last 3 versions", "Safari >= 8", "iOS >= 8"]}}],
         "@babel/preset-react"
