--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
+    "babel-plugin-import": "^1.12.0",
     "base64-loader": "1.0.0",
     "bowser": "1.9.4",
     "chromedriver": "74.0.0",
@@ -67,6 +68,7 @@
     "jest": "^21.0.0",
     "js-base64": "2.4.9",
     "keymirror": "0.1.1",
+    "less-loader": "^5.0.0",
     "lodash.bindall": "4.4.0",
     "lodash.debounce": "4.0.8",
     "lodash.defaultsdeep": "4.6.0",
@@ -105,8 +107,8 @@
     "redux-throttle": "0.1.1",
     "rimraf": "^2.6.1",
     "scratch-audio": "0.1.0-prerelease.20190114210212",
-    "scratch-l10n": "3.3.20190711005050",
     "scratch-blocks": "0.1.0-prerelease.1561987297",
+    "scratch-l10n": "3.3.20190711005050",
     "scratch-paint": "0.2.0-prerelease.20190624133806",
     "scratch-render": "0.1.0-prerelease.20190605151415",
     "scratch-storage": "1.3.2",
@@ -138,5 +140,10 @@
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/test/__mocks__/fileMock.js",
       "\\.(css|less)$": "<rootDir>/test/__mocks__/styleMock.js"
     }
+  },
+  "dependencies": {
+    "antd": "^3.20.3",
+    "axios": "^0.19.0",
+    "less": "^3.9.0"
   }
 }
