--- a/package.json
+++ b/package.json
@@ -105,8 +105,8 @@
     "redux-throttle": "0.1.1",
     "rimraf": "^2.6.1",
     "scratch-audio": "0.1.0-prerelease.20190114210212",
-    "scratch-l10n": "3.3.20190717144934",
     "scratch-blocks": "0.1.0-prerelease.1561987297",
+    "scratch-l10n": "3.3.20190717144934",
     "scratch-paint": "0.2.0-prerelease.20190718175814",
     "scratch-render": "0.1.0-prerelease.20190605151415",
     "scratch-storage": "1.3.2",
@@ -119,6 +119,7 @@
     "text-encoding": "0.7.0",
     "to-style": "1.3.3",
     "uglifyjs-webpack-plugin": "^1.2.5",
+    "url-loader": "^2.1.0",
     "wav-encoder": "1.3.0",
     "web-audio-test-api": "^0.5.2",
     "webpack": "^4.6.0",
