--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "peerDependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
+  },"dependencies": {
+    "scratch-paint": "github:fsih/scratch-paint#pull908"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
@@ -109,7 +111,6 @@
     "scratch-audio": "0.1.0-prerelease.20190114210212",
     "scratch-l10n": "3.5.20190917223712",
     "scratch-blocks": "0.1.0-prerelease.1568071968",
-    "scratch-paint": "0.2.0-prerelease.20190822205009",
     "scratch-render": "0.1.0-prerelease.20190912174749",
     "scratch-storage": "1.3.2",
     "scratch-svg-renderer": "0.2.0-prerelease.20190822202608",
