generate setup-opal.js from opal.min.js and opal-parser.min.js for smalruby3-desktop.

--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "description": "GraphicaL User Interface for creating and running Smalruby 3.0 projects",
   "main": "./dist/smalruby3-gui.js",
   "scripts": {
-    "build": "npm run clean && webpack --progress --colors --bail",
-    "clean": "rimraf ./build && mkdirp build && rimraf ./dist && mkdirp dist",
+    "setup-opal": "if [ ! -e ./static/javascripts/setup-opal.js ]; then mkdir -p ./static/javascripts && (cd opal && cat opal.min.js config-opal.js opal-parser.min.js config-opal-parser.js > ../static/javascripts/setup-opal.js); fi",
+    "build": "npm run clean && npm run setup-opal && webpack --progress --colors --bail",
+    "clean": "rimraf ./static/javascripts/setup-opal.js && rimraf ./build && mkdirp build && rimraf ./dist && mkdirp dist",
     "deploy": "touch build/.nojekyll && gh-pages -t -d build -m \"Build for $(git log --pretty=format:%H -n1)\"",
     "prune": "./prune-gh-pages.sh",
     "i18n:push": "tx-push-src scratch-editor interface translations/en.json",
     "i18n:src": "rimraf ./translations/messages/src && babel src > tmp.js && rimraf tmp.js && build-i18n-src ./translations/messages/src ./translations/ && npm run i18n:push",
-    "start": "webpack-dev-server",
+    "start": "npm run setup-opal && webpack-dev-server",
     "test": "npm run test:lint && npm run test:unit && npm run build && npm run test:integration",
     "test:integration": "jest --runInBand test[\\\\/]integration",
     "test:lint": "eslint . --ext .js,.jsx",
     "test:unit": "jest test[\\\\/]unit",
     "test:smoke": "jest --runInBand test[\\\\/]smoke",
-    "watch": "webpack --progress --colors --watch"
+    "watch": "npm run setup-opal && webpack --progress --colors --watch"
   },
   "author": "Ruby Programming Shounendan",
   "license": "BSD-3-Clause",
