--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
 script:
 - npm run test:lint
 - npm run test:unit
-- npm run clean && $(npm bin)/webpack --colors --bail --silent
+- npm run clean && npm run setup-opal && $(npm bin)/webpack --colors --bail --silent
 - npm run test:integration
 deploy:
 - provider: script
