--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },"dependencies": {
-    "scratch-paint": "github:fsih/scratch-paint#fillSpace"
+    "scratch-blocks": "github:fsih/scratch-blocks#feature/eyes2"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
@@ -111,8 +111,8 @@
     "rimraf": "^2.6.1",
     "scratch-audio": "0.1.0-prerelease.20190925183642",
     "scratch-l10n": "3.6.20191008224547",
-    "scratch-blocks": "0.1.0-prerelease.1570730963",
     "scratch-render": "0.1.0-prerelease.20191021180653",
+    "scratch-paint": "0.2.0-prerelease.20191010161144",
     "scratch-storage": "1.3.2",
     "scratch-svg-renderer": "0.2.0-prerelease.20190822202608",
     "scratch-vm": "0.2.0-prerelease.20191017151616",
