--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "peerDependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
-  },"dependencies": {
+  },
+  "dependencies": {
     "scratch-blocks": "github:fsih/scratch-blocks#feature/eyes2"
   },
   "devDependencies": {
