fix travis try 2

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ before_install:
 install:
 - npm --production=false install
 - npm --production=false update
+- git clone git@github.com:google/closure-library.git
 - cd node_modules/scratch-blocks && npm --production=false install && npm run prepublish && cd -
 before_script: greenkeeper-lockfile-update
 script:
