--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "minilog": "3.1.0",
     "mkdirp": "^0.5.1",
     "omggif": "1.0.9",
-    "papaparse": "4.6.2",
+    "papaparse": "^4.6.2",
     "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-simple-vars": "^5.0.1",
@@ -107,8 +107,8 @@
     "redux-throttle": "0.1.1",
     "rimraf": "^2.6.1",
     "scratch-audio": "0.1.0-prerelease.20190114210212",
-    "scratch-l10n": "3.5.20190917223712",
     "scratch-blocks": "0.1.0-prerelease.1568071968",
+    "scratch-l10n": "3.5.20190917223712",
     "scratch-paint": "0.2.0-prerelease.20190822205009",
     "scratch-render": "0.1.0-prerelease.20190912174749",
     "scratch-storage": "1.3.2",
@@ -140,5 +140,8 @@
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/test/__mocks__/fileMock.js",
       "\\.(css|less)$": "<rootDir>/test/__mocks__/styleMock.js"
     }
+  },
+  "dependencies": {
+    "xml-js": "^1.6.11"
   }
 }
