--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "computed-style-to-inline-style": "3.0.0",
     "copy-webpack-plugin": "^4.5.1",
     "core-js": "2.5.7",
-    "css-loader": "^1.0.0",
+    "css-loader": "^3.4.2",
     "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "1.3.0",
     "es6-object-assign": "1.1.0",
@@ -59,7 +59,7 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.14.1",
     "eslint-plugin-react": "^7.12.4",
-    "file-loader": "2.0.0",
+    "file-loader": "^5.0.2",
     "get-float-time-domain-data": "0.1.0",
     "get-user-media-promise": "1.1.4",
     "gh-pages": "github:rschamp/gh-pages#publish-branch-to-subfolder",
@@ -87,7 +87,7 @@
     "prop-types": "^15.5.10",
     "query-string": "^5.1.1",
     "raf": "^3.4.0",
-    "raw-loader": "^0.5.1",
+    "raw-loader": "^4.0.0",
     "react": "16.2.0",
     "react-contextmenu": "2.9.4",
     "react-dom": "16.2.0",
@@ -117,7 +117,7 @@
     "scratch-vm": "0.2.0-prerelease.20191227164934",
     "selenium-webdriver": "3.6.0",
     "startaudiocontext": "1.2.1",
-    "style-loader": "^0.23.0",
+    "style-loader": "^1.1.2",
     "svg-to-image": "1.1.3",
     "text-encoding": "0.7.0",
     "to-style": "1.3.3",
