--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smalruby3-gui",
-  "version": "0.1.0",
+  "version": "0.9.0",
   "description": "GraphicaL User Interface for creating and running Smalruby 3.0 projects",
   "main": "./dist/smalruby3-gui.js",
   "scripts": {
@@ -98,6 +98,7 @@
     "react-draggable": "3.0.5",
     "react-ga": "2.5.3",
     "react-intl": "2.9.0",
+    "react-intl-redux": "^0.7.0",
     "react-modal": "3.9.1",
     "react-popover": "0.5.10",
     "react-redux": "5.0.7",
@@ -149,7 +150,6 @@
     }
   },
   "dependencies": {
-    "lodash.camelcase": "^4.3.0",
-    "react-intl-redux": "^0.7.0"
+    "lodash.camelcase": "^4.3.0"
   }
 }
