--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "scratch-blocks": "0.1.0-prerelease.1584453125",
     "scratch-l10n": "3.7.20200317213230",
     "scratch-paint": "0.2.0-prerelease.20200213174123",
-    "scratch-render": "github:adroitwhiz/scratch-render#totally-normal",
+    "scratch-render": "0.1.0-prerelease.20200324022200",
     "scratch-storage": "1.3.2",
     "scratch-svg-renderer": "0.2.0-prerelease.20200205003400",
     "scratch-vm": "0.2.0-prerelease.20200319175700",
