--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "arraybuffer-loader": "^1.0.6",
     "autoprefixer": "^9.0.1",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "10.0.1",
     "babel-loader": "^8.0.4",
     "base64-loader": "1.0.0",
     "bowser": "1.9.4",
@@ -108,8 +108,8 @@
     "redux-throttle": "0.1.1",
     "rimraf": "^2.6.1",
     "scratch-audio": "0.1.0-prerelease.20190925183642",
-    "scratch-l10n": "3.6.20191008224547",
     "scratch-blocks": "0.1.0-prerelease.1572384380",
+    "scratch-l10n": "3.6.20191008224547",
     "scratch-paint": "0.2.0-prerelease.20191010161144",
     "scratch-render": "0.1.0-prerelease.20200324022200",
     "scratch-storage": "1.3.2",
