--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "scratch-render": "0.1.0-prerelease.20200228152431",
     "scratch-storage": "1.3.2",
     "scratch-svg-renderer": "0.2.0-prerelease.20200205003400",
+    "scratch-vm": "github:smalruby/scratch-vm#mesh_extension",
     "selenium-webdriver": "3.6.0",
     "shelljs": "^0.8.3",
     "startaudiocontext": "1.2.1",
@@ -149,7 +150,6 @@
     }
   },
   "dependencies": {
-    "lodash.camelcase": "^4.3.0",
-    "scratch-vm": "github:smalruby/scratch-vm#mesh_extension"
+    "lodash.camelcase": "^4.3.0"
   }
 }
