--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,9 @@ before_install:
 - '[[ $(node -v) =~ ^v9.*$ ]] || npm install -g npm@latest' # skipped when using node 9
 install:
 - npm --production=false install
+- (cd node_modules/scratch-vm && npm --production=false install && npm run build)
 script:
-- npm run test:lint
 - npm run test:unit
-- npm run clean && npm run setup-opal && $(npm bin)/webpack --colors --bail --silent
-- npm run test:integration
 deploy:
 - provider: script
   on:
