updated scratch-vm and deploy smalruby.app.

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,3 +33,10 @@ deploy:
     - develop
   skip_cleanup: true
   script: npm run deploy -- -x -r https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git
+deploy:
+- provider: script
+  on:
+    branch:
+    - develop
+  skip_cleanup: true
+  script: npm run deploy:smalruby.app -- -x -r https://${GH_TOKEN}@github.com/smalruby/smalruby.app.git
